login check if has token